k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: e2e-devops
  labels:
    name: e2e-devops
    app: fullstack-app
