k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ${DOCKER_REPO_NAME}
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /$2
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/ssl-redirect: "false"
    alb.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /api/payment.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: payment-service
            port:
              number: 3000
      - path: /api/project.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: project-service
            port:
              number: 3001
      - path: /api/user.*
        pathType: ImplementationSpecific
        backend:
          service:
            name: user-service
            port:
              number: 3002
      - path: /|.*
        pathType: Exact
        backend:
          service:
            name: frontend-service
            port:
              number: 80
# Frontend ingress is now handled by app-ingress above
# AWS ALB will route all traffic including static assets
